Completed Rough Frontend v3

--- a/cyberdrishti-frontend/src/components/Header.css
+++ b/cyberdrishti-frontend/src/components/Header.css
@@ -39,9 +39,8 @@
 }
 
 .dropdown-menu {
-    position: absolute;
-    top: 40px;
-    right: 0;
+    align-items: flex-end;
+    position: flex;
     background-color: #303030;
     border: 1px solid #444;
     border-radius: 8px;
