--- a/cyberdrishti-frontend/src/stats/PhishingTrendChart.css
+++ b/cyberdrishti-frontend/src/stats/PhishingTrendChart.css
@@ -1,12 +1,9 @@
 #phishing-trend-container {
-    background-color: #1a1a1a;
+    background-color: #272829;
     color: #ffffff;
-    padding: 2rem;
-    border-radius: 16px;
-    box-shadow: 0 8px 24px rgba(255, 255, 255, 0.1);
-    max-width: 500px;
-    margin: 2rem auto;
     text-align: center;
+    margin: 10px;
+    padding: 20px;
 }
 
 #phishing-trend-chart {
