--- a/cyberdrishti-frontend/src/stats/TopTargetedBanksChart.css
+++ b/cyberdrishti-frontend/src/stats/TopTargetedBanksChart.css
@@ -1,8 +1,7 @@
 #chart-container {
-    background-color: #121212; 
-    border-radius: 12px;
+    background-color: #272829; 
+    margin: 10px;
     padding: 20px;
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.7);
 }
 
 #chart-title {
